{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 73,
  "lineage": "0f9b48e4-d144-4914-664c-09ab7c9d9dc1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:internet-gateway/igw-0bebdf0d55f0a621e",
            "id": "igw-0bebdf0d55f0a621e",
            "owner_id": "051886849421",
            "tags": {
              "Name": "techchallenge-igw"
            },
            "tags_all": {
              "Name": "techchallenge-igw"
            },
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:route-table/rtb-05582d2bbb6f34a14",
            "id": "rtb-05582d2bbb6f34a14",
            "owner_id": "051886849421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bebdf0d55f0a621e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techchallenge-public-rt"
            },
            "tags_all": {
              "Name": "techchallenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004313b03fb618a5b",
            "route_table_id": "rtb-05582d2bbb6f34a14",
            "subnet_id": "subnet-096efc252ec09d820"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08440cff84f2cf33d",
            "route_table_id": "rtb-05582d2bbb6f34a14",
            "subnet_id": "subnet-07a5ff5b11975b2aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:security-group/sg-0d64de0e1b6b2222a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d64de0e1b6b2222a",
            "ingress": [],
            "name": "techchallenge-eks-nodes-20260712143047954900000001",
            "name_prefix": "techchallenge-eks-nodes-",
            "owner_id": "051886849421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techchallenge-eks-nodes-sg"
            },
            "tags_all": {
              "Name": "techchallenge-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sqlserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:security-group/sg-0cd9b0317527a2557",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd9b0317527a2557",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.111.170.52/32"
                ],
                "description": "Acesso temporario via SSMS",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [],
                "description": "SQL Server access from EKS nodes",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d64de0e1b6b2222a"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "techchallenge-sqlserver-20260712143051355800000003",
            "name_prefix": "techchallenge-sqlserver-",
            "owner_id": "051886849421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techchallenge-sqlserver-sg"
            },
            "tags_all": {
              "Name": "techchallenge-sqlserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-091c1ae5fb0acb68a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091c1ae5fb0acb68a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-private-0"
            },
            "tags_all": {
              "Name": "techchallenge-private-0"
            },
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-0801f441dda03adda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0801f441dda03adda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-private-1"
            },
            "tags_all": {
              "Name": "techchallenge-private-1"
            },
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-096efc252ec09d820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096efc252ec09d820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-public-0",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "techchallenge-public-0",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:subnet/subnet-07a5ff5b11975b2aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a5ff5b11975b2aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051886849421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techchallenge-public-1",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "techchallenge-public-1",
              "kubernetes.io/cluster/techchallenge": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a71675be26f37a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051886849421:vpc/vpc-07a71675be26f37a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04109c4e0e088f96d",
            "default_route_table_id": "rtb-0f12261ae3fc55c6d",
            "default_security_group_id": "sg-00c16be90f875a85b",
            "dhcp_options_id": "dopt-0fe8b66fb1c233f10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a71675be26f37a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f12261ae3fc55c6d",
            "owner_id": "051886849421",
            "tags": {
              "Name": "techchallenge-vpc"
            },
            "tags_all": {
              "Name": "techchallenge-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}